Page MenuHome GnuPG

gpgconf --homedir is ignored when setting options
Closed, ResolvedPublic

Description

similar to T4496, gpgconf --change-options appears to respect $GNUPGHOME but silently ignores --homedir

0 dkg@alice:~$ rm -f ~/.gnupg/gpgsm.conf && mkdir -m 0700 xxx
0 dkg@alice:~$ echo disable-crl-checks::1 | gpgconf --homedir /home/dkg/xxx --change-options gpgsm
gpgsm:S/MIME:/usr/bin/gpgsm:1:1:
0 dkg@alice:~$ head -v ~/.gnupg/gpgsm.conf xxx/gpgsm.conf
==> /home/dkg/.gnupg/gpgsm.conf <==

###+++--- GPGConf ---+++###
disable-crl-checks
###+++--- GPGConf ---+++### Wed 18 Mar 2020 08:33:28 PM EDT
# GPGConf edited this configuration file.
# It will disable options before this marked block, but it will
# never change anything below these lines.
head: cannot open 'xxx/gpgsm.conf' for reading: No such file or directory
1 dkg@alice:~$

Details

Version
2.2.19